test/langtools/tools/javac/valhalla/primitive-classes/CheckFeatureGate2.out
CheckFeatureGate2.java:11:17: compiler.err.primitive.classes.not.supported: 21
1 error
